# occuwise-ai

./: .gitignore  CLAUDE.md  Makefile  README.md  corereqs.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/data/: aptos.yaml  combined_dr.yaml  duke_oct.yaml  eyepacs.yaml  idrid.yaml  messidor.yaml  oct2017.yaml  refuge_cls.yaml  refuge_seg.yaml
configs/experiment/: dr_baseline.yaml  glaucoma_seg.yaml  oct_classification.yaml  retfound_cfp.yaml  retfound_combined.yaml  retfound_oct.yaml
configs/model/: convnext_tiny.yaml  densenet121.yaml  efficientnet_b0.yaml  efficientnet_b4.yaml  resnet18.yaml  resnet50.yaml  retfound.yaml  retfound_oct.yaml  unet.yaml  vgg16.yaml  vit_base.yaml  xception.yaml
configs/train/: default.yaml
data/: README.md
docs/: GUIDE.md  kaggle-notebook.md
models/production/: model_card.json
notebooks/: retfound_combined_kaggle.ipynb
scripts/: _manifest.py  fetch_samples.py  prepare_aptos.py  prepare_combined_dr.py  prepare_duke_oct.py  prepare_eyepacs.py  prepare_idrid.py  prepare_messidor.py  prepare_oct2017.py  prepare_refuge.py
serving/: Dockerfile  README.md  app.py  inference.py  poc_predictor.py  webapp.py
serving/web/: predict.html  prepare.html
src/occuwise/: __init__.py  cli.py  compare.py  evaluate.py  explain.py  export.py  predict.py  predictor.py  train.py
src/occuwise/data/: __init__.py  datamodule.py  datasets.py  registry.py  transforms.py
src/occuwise/engine/: __init__.py  lit_classifier.py  lit_segmenter.py  losses.py  (+1 more)
tests/: test_data.py  test_models.py  test_retfound_weights.py
(+2 files in other folders)
